--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,9 +2,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para {
   color: hsl(0, 0%, 0%);
+  font-size: 22px;
   font-weight: 800;
 }
 
@@ -13,23 +13,21 @@ body {
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
-
 .confirm {
-  background: green;
+  background-color: green;
   color: white;
   font-weight: bold;
 } 
 
+.cancel {
+  background-color: transparent;
+}
+
 .button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
